--- a/package/Samples~/DeepLinks/DeeplinkSample-Website.html
+++ b/package/Samples~/DeepLinks/DeeplinkSample-Website.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <h1>Deeplink Samples</h1>
-    <h3>Needs com.needle.deeplink in project.</h3>
-    <h3>Deeplinks will always be sent to the last active Unity instance.</h3>
+    <h4>Deeplinks will always be sent to the last active Unity instance.</h4>
 
-    <h3>Examples</h3>
-    <a href="com.unity3d.kharma:install-package/com.unity.memoryprofiler">Install MemoryProfiler package</a><br/>
+    <h3>Built into Unity on 2021.2+</h3>
+    <a href="com.unity3d.kharma:upmpackage/com.unity.memoryprofiler">Install MemoryProfiler package</a><br/>
+    
+    <h3>Needs com.needle.deeplink in project.</h3>
     <a href="com.unity3d.kharma:custom/my-custom-data">Custom Data</a><br/>
     <a href="com.unity3d.kharma:open-scene/DeepLinkSample">Open Sample Scene</a><br/>
     <a href="com.unity3d.kharma:selected-sample/Receiver1">Ping Receiver1</a><br/>
